--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "bun": "^0.0.12",
     "deep-equal": "^1.0.1",
     "functional-red-black-tree": "^1.0.1",
-    "google-gax": "^1.3.0",
+    "google-gax": "git+https://github.com/stevenschobert/gax-nodejs.git",
     "through2": "^3.0.0"
   },
   "devDependencies": {
